Added script for generate submission file from 2002 to 2016.

--- a/DA - NCAA - Get Test File.ipynb
+++ b/DA - NCAA - Get Test File.ipynb
@@ -247,6 +247,19 @@
    "source": [
     "print(get_test(tny, 2014))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for ss in range(2002, 2017):\n",
+    "    test = get_test(tny, ss)\n",
+    "    test.to_csv('dataset/sample_submission_' + str(ss) + \".csv\")"
+   ]
   }
  ],
  "metadata": {
