Amended the Teams2017 script to add also the names of the teams

--- a/DA - NCAA - Get Teams 2017.ipynb
+++ b/DA - NCAA - Get Teams 2017.ipynb
@@ -42,13 +42,13 @@
     }
    ],
    "source": [
-    "submission_df = pd.read_csv('/media/sf_QMUL_SD/DataAnalytics/CourseWork/data/SampleSubmission.csv')\n",
+    "submission_df = pd.read_csv('dataset/sample_submission.csv')\n",
     "print(submission_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -62,13 +62,13 @@
       "2    1124\n",
       "3    1137\n",
       "4    1139\n",
-      "Name: Id, dtype: object\n",
+      "Name: Id, dtype: int64\n",
       "63    1452\n",
       "64    1455\n",
       "65    1457\n",
       "66    1458\n",
       "67    1462\n",
-      "Name: Id, dtype: object\n"
+      "Name: Id, dtype: int64\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
     "\n",
     "teams_a_df['Id'] = submission_df['Id'].str[5:9].unique()\n",
     "teams_b_df['Id'] = submission_df['Id'].str[10:].unique()\n",
-    "all_teams_df['Id'] = pd.concat([teams_a_df['Id'], teams_b_df['Id']]).sort_values().unique()\n",
+    "all_teams_df['Id'] = pd.concat([teams_a_df['Id'], teams_b_df['Id']]).sort_values().unique().astype('int')\n",
     "\n",
     "print(all_teams_df['Id'].head())\n",
     "print(all_teams_df['Id'].tail())"
@@ -87,13 +87,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Team_Id Team_Name\n",
+      "0     1112   Arizona\n",
+      "1     1116  Arkansas\n",
+      "2     1124    Baylor\n",
+      "3     1137  Bucknell\n",
+      "4     1139    Butler\n",
+      "    Team_Id      Team_Name\n",
+      "63     1452  West Virginia\n",
+      "64     1455     Wichita St\n",
+      "65     1457       Winthrop\n",
+      "66     1458      Wisconsin\n",
+      "67     1462         Xavier\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Join with Teams to get the name of the team\n",
+    "teams_lkp_df = pd.read_csv('dataset/Teams.csv')\n",
+    "final_teams_df = pd.merge(all_teams_df, teams_lkp_df, how='inner', left_on='Id', right_on='Team_Id')[['Team_Id','Team_Name']]\n",
+    "print(final_teams_df.head())\n",
+    "print(final_teams_df.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "all_teams_df.to_csv(path_or_buf='/media/sf_QMUL_SD/DataAnalytics/CourseWork/data/teams2017.csv', index=False)"
+    "final_teams_df.to_csv(path_or_buf='dataset/Teams2017.csv', index=False)"
    ]
   },
   {
