Added notebook and script for how to evaluate the prediction.

--- a/DA - NCAA - Get Test File.ipynb
+++ b/DA - NCAA - Get Test File.ipynb
@@ -183,7 +183,7 @@
     "            if t2 > t1:\n",
     "                l.append(str(season) + \"_\" + str(t1) + \"_\" + str(t2))\n",
     "    true = pd.DataFrame(pd.Series(l), columns=['Id'])\n",
-    "    true['Pred'] = -1\n",
+    "    true['WL'] = -1\n",
     "    \n",
     "    for index, row in data.iterrows():\n",
     "        if row.Wteam < row.Lteam:\n",
@@ -194,7 +194,7 @@
     "            p = 0\n",
     "            t1 = row.Lteam\n",
     "            t2 = row.Wteam\n",
-    "        true.loc[true.Id == str(season)+\"_\"+str(t1)+\"_\"+str(t2), 'Pred'] = p\n",
+    "        true.loc[true.Id == str(season)+\"_\"+str(t1)+\"_\"+str(t2), 'WL'] = p\n",
     "    return true"
    ]
   },
@@ -291,68 +291,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  Id  Pred\n",
-      "0     2014_1107_1110    -1\n",
-      "1     2014_1107_1112    -1\n",
-      "2     2014_1107_1113    -1\n",
-      "3     2014_1107_1124    -1\n",
-      "4     2014_1107_1140    -1\n",
-      "5     2014_1107_1142    -1\n",
-      "6     2014_1107_1153    -1\n",
-      "7     2014_1107_1157    -1\n",
-      "8     2014_1107_1160    -1\n",
-      "9     2014_1107_1163    -1\n",
-      "10    2014_1107_1166    -1\n",
-      "11    2014_1107_1173    -1\n",
-      "12    2014_1107_1174    -1\n",
-      "13    2014_1107_1181    -1\n",
-      "14    2014_1107_1184    -1\n",
-      "15    2014_1107_1196     0\n",
-      "16    2014_1107_1203    -1\n",
-      "17    2014_1107_1211    -1\n",
-      "18    2014_1107_1217    -1\n",
-      "19    2014_1107_1234    -1\n",
-      "20    2014_1107_1235    -1\n",
-      "21    2014_1107_1242    -1\n",
-      "22    2014_1107_1243    -1\n",
-      "23    2014_1107_1246    -1\n",
-      "24    2014_1107_1257    -1\n",
-      "25    2014_1107_1264    -1\n",
-      "26    2014_1107_1269    -1\n",
-      "27    2014_1107_1272    -1\n",
-      "28    2014_1107_1273    -1\n",
-      "29    2014_1107_1276    -1\n",
-      "...              ...   ...\n",
-      "2248  2014_1437_1459    -1\n",
-      "2249  2014_1437_1462    -1\n",
-      "2250  2014_1438_1444    -1\n",
-      "2251  2014_1438_1451    -1\n",
-      "2252  2014_1438_1454    -1\n",
-      "2253  2014_1438_1455    -1\n",
-      "2254  2014_1438_1458    -1\n",
-      "2255  2014_1438_1459    -1\n",
-      "2256  2014_1438_1462    -1\n",
-      "2257  2014_1444_1451    -1\n",
-      "2258  2014_1444_1454    -1\n",
-      "2259  2014_1444_1455    -1\n",
-      "2260  2014_1444_1458    -1\n",
-      "2261  2014_1444_1459    -1\n",
-      "2262  2014_1444_1462    -1\n",
-      "2263  2014_1451_1454    -1\n",
-      "2264  2014_1451_1455    -1\n",
-      "2265  2014_1451_1458    -1\n",
-      "2266  2014_1451_1459    -1\n",
-      "2267  2014_1451_1462    -1\n",
-      "2268  2014_1454_1455    -1\n",
-      "2269  2014_1454_1458    -1\n",
-      "2270  2014_1454_1459    -1\n",
-      "2271  2014_1454_1462    -1\n",
-      "2272  2014_1455_1458    -1\n",
-      "2273  2014_1455_1459    -1\n",
-      "2274  2014_1455_1462    -1\n",
-      "2275  2014_1458_1459    -1\n",
-      "2276  2014_1458_1462    -1\n",
-      "2277  2014_1459_1462    -1\n",
+      "                  Id  WL\n",
+      "0     2014_1107_1110  -1\n",
+      "1     2014_1107_1112  -1\n",
+      "2     2014_1107_1113  -1\n",
+      "3     2014_1107_1124  -1\n",
+      "4     2014_1107_1140  -1\n",
+      "5     2014_1107_1142  -1\n",
+      "6     2014_1107_1153  -1\n",
+      "7     2014_1107_1157  -1\n",
+      "8     2014_1107_1160  -1\n",
+      "9     2014_1107_1163  -1\n",
+      "10    2014_1107_1166  -1\n",
+      "11    2014_1107_1173  -1\n",
+      "12    2014_1107_1174  -1\n",
+      "13    2014_1107_1181  -1\n",
+      "14    2014_1107_1184  -1\n",
+      "15    2014_1107_1196   0\n",
+      "16    2014_1107_1203  -1\n",
+      "17    2014_1107_1211  -1\n",
+      "18    2014_1107_1217  -1\n",
+      "19    2014_1107_1234  -1\n",
+      "20    2014_1107_1235  -1\n",
+      "21    2014_1107_1242  -1\n",
+      "22    2014_1107_1243  -1\n",
+      "23    2014_1107_1246  -1\n",
+      "24    2014_1107_1257  -1\n",
+      "25    2014_1107_1264  -1\n",
+      "26    2014_1107_1269  -1\n",
+      "27    2014_1107_1272  -1\n",
+      "28    2014_1107_1273  -1\n",
+      "29    2014_1107_1276  -1\n",
+      "...              ...  ..\n",
+      "2248  2014_1437_1459  -1\n",
+      "2249  2014_1437_1462  -1\n",
+      "2250  2014_1438_1444  -1\n",
+      "2251  2014_1438_1451  -1\n",
+      "2252  2014_1438_1454  -1\n",
+      "2253  2014_1438_1455  -1\n",
+      "2254  2014_1438_1458  -1\n",
+      "2255  2014_1438_1459  -1\n",
+      "2256  2014_1438_1462  -1\n",
+      "2257  2014_1444_1451  -1\n",
+      "2258  2014_1444_1454  -1\n",
+      "2259  2014_1444_1455  -1\n",
+      "2260  2014_1444_1458  -1\n",
+      "2261  2014_1444_1459  -1\n",
+      "2262  2014_1444_1462  -1\n",
+      "2263  2014_1451_1454  -1\n",
+      "2264  2014_1451_1455  -1\n",
+      "2265  2014_1451_1458  -1\n",
+      "2266  2014_1451_1459  -1\n",
+      "2267  2014_1451_1462  -1\n",
+      "2268  2014_1454_1455  -1\n",
+      "2269  2014_1454_1458  -1\n",
+      "2270  2014_1454_1459  -1\n",
+      "2271  2014_1454_1462  -1\n",
+      "2272  2014_1455_1458  -1\n",
+      "2273  2014_1455_1459  -1\n",
+      "2274  2014_1455_1462  -1\n",
+      "2275  2014_1458_1459  -1\n",
+      "2276  2014_1458_1462  -1\n",
+      "2277  2014_1459_1462  -1\n",
       "\n",
       "[2278 rows x 2 columns]\n"
      ]
