Added mapping files

--- a/DA - NCAA - Teams 2017 stats.ipynb
+++ b/DA - NCAA - Teams 2017 stats.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 172,
    "metadata": {
     "collapsed": false
    },
@@ -32,18 +32,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Team_Id Team_Name\n",
-      "0     1112   Arizona\n",
-      "1     1116  Arkansas\n",
-      "2     1124    Baylor\n",
-      "3     1137  Bucknell\n",
-      "4     1139    Butler\n"
+      "   Team_Id    Team_Name\n",
+      "0     1101  Abilene Chr\n",
+      "1     1102    Air Force\n",
+      "2     1103        Akron\n",
+      "3     1104      Alabama\n",
+      "4     1105  Alabama A&M\n",
+      "     Team_Id      Team_Name\n",
+      "359     1460      Wright St\n",
+      "360     1461        Wyoming\n",
+      "361     1462         Xavier\n",
+      "362     1463           Yale\n",
+      "363     1464  Youngstown St\n"
      ]
     }
    ],
    "source": [
-    "teams_df = pd.read_csv('dataset/Teams2017.csv')\n",
-    "print(teams_df.head())"
+    "#teams_df = pd.read_csv('dataset/Teams2017.csv')\n",
+    "teams_df = pd.read_csv('dataset/Teams.csv')\n",
+    "print(teams_df.head())\n",
+    "print(teams_df.tail())"
    ]
   },
   {
@@ -588,6 +596,120 @@
    ],
    "source": [
     "all_stats_df.loc[all_stats_df['TName'] == 'Duke']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Parse files with stats\n",
+    "stats_df = pd.DataFrame()\n",
+    "r_stats_df = pd.DataFrame()\n",
+    "for yy in range(2,16):\n",
+    "    stats_df = pd.read_csv('dataset/'+'{:02d}'.format(yy)+'PCBR.csv')\n",
+    "    stats_df['Season'] = int('20{:02d}'.format(yy))\n",
+    "    #stats_df['TName'] = stats_df['Team'].str.replace(r'\\xc2\\xa0[0-9]+','')\n",
+    "    stats_df['TName'] = stats_df['Team'].str.replace(r'.', '')\n",
+    "    stats_df = pd.merge(stats_df, teams_df, how='right', left_on='TName', right_on='Team_Name')\n",
+    "    r_stats_df = pd.concat([r_stats_df, stats_df])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique matched teams: 266\n",
+      "Not matched teams:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['Abilene Chr', 'Alabama', 'Albany NY', 'Alcorn St', 'Alliant Intl',\n",
+       "       'American Univ', 'Arizona', 'Ark Little Rock', 'Ark Pine Bluff',\n",
+       "       'Armstrong St', 'Augusta', 'Bethune-Cookman', 'Birmingham So',\n",
+       "       'Boston College', 'Boston Univ', 'Brooklyn', 'Bryant', 'C Michigan',\n",
+       "       'Cal Poly SLO', 'California', 'Cent Arkansas', 'Central Conn',\n",
+       "       'Charleston So', 'Charlotte', 'Cincinnati', 'Citadel',\n",
+       "       'Coastal Car', 'Col Charleston', 'Connecticut', 'Creighton',\n",
+       "       'CS Bakersfield', 'CS Fullerton', 'CS Northridge', 'CS Sacramento',\n",
+       "       'Davidson', 'Duke', 'E Illinois', 'E Kentucky', 'E Michigan',\n",
+       "       'E Washington', 'Edwardsville', 'ETSU', 'F Dickinson',\n",
+       "       'FL Atlantic', 'FL Gulf Coast', 'Florida', 'Florida Intl',\n",
+       "       'G Washington', 'Ga Southern', 'Georgia', 'Gonzaga', 'Grambling',\n",
+       "       'Grand Canyon', 'Hampton', 'Hardin-Simmons', 'Hawaii', 'Holy Cross',\n",
+       "       'Houston Bap', 'IL Chicago', 'Illinois', 'Incarnate Word',\n",
+       "       'Indiana', 'Kansas', 'Kennesaw', 'Kent', 'Kentucky', 'Long Island',\n",
+       "       'Longwood', 'Loy Marymount', 'Loyola-Chicago', 'MA Lowell',\n",
+       "       'Marquette', 'Maryland', 'McNeese St', 'MD E Shore', 'Miami FL',\n",
+       "       'Michigan St', 'Mississippi', 'Mississippi St', 'Missouri',\n",
+       "       'Missouri KC', 'Missouri St', 'Monmouth NJ', 'Montana',\n",
+       "       'MS Valley St', \"Mt St Mary's\", 'MTSU', 'Murray St', 'N Colorado',\n",
+       "       'N Dakota St', 'N Illinois', 'N Kentucky', 'NC A&T', 'NC Central',\n",
+       "       'NC State', 'NE Illinois', 'NE Omaha', 'NJIT', 'North Dakota',\n",
+       "       'North Florida', 'Northwestern LA', 'Notre Dame', 'Ohio St',\n",
+       "       'Okla City', 'Oklahoma', 'Oklahoma St', 'Oregon', 'Penn',\n",
+       "       'Pepperdine', 'Pittsburgh', 'Prairie View', 'Presbyterian',\n",
+       "       'S Carolina St', 'S Dakota St', 'S Illinois', 'San Diego St',\n",
+       "       'Santa Barbara', 'SC Upstate', 'SE Louisiana', 'SE Missouri St',\n",
+       "       'Seattle', 'SF Austin', 'Siena', 'South Dakota', 'Southern Univ',\n",
+       "       \"St John's\", \"St Joseph's PA\", 'St Louis', \"St Mary's CA\",\n",
+       "       \"St Peter's\", 'Stanford', 'TAM C. Christi', 'Texas', 'Texas St',\n",
+       "       'Texas Tech', 'TN Martin', 'Troy', 'Tulsa', 'UTRGV', 'TX Southern',\n",
+       "       'UC Davis', 'UCLA', 'ULL', 'ULM', 'UNC Wilmington', 'USC',\n",
+       "       'UT San Antonio', 'Utah', 'Utah Valley', 'Utica', 'VA Commonwealth',\n",
+       "       'Valparaiso', 'W Carolina', 'W Illinois', 'WKU', 'W Michigan',\n",
+       "       'W Salem St', 'W Texas A&M', 'Wake Forest', 'WI Green Bay',\n",
+       "       'WI Milwaukee', 'Winthrop', 'Wisconsin', 'Wyoming', 'Xavier',\n",
+       "       'Arizona St', 'Auburn', 'Austin Peay', 'Butler', 'BYU', 'Colorado',\n",
+       "       'Colorado St', 'Dayton', 'IUPUI', 'Louisville', 'LSU', 'Manhattan',\n",
+       "       'Memphis', 'Purdue', 'Sam Houston St', 'San Diego', 'Syracuse',\n",
+       "       'UNC Asheville', 'Utah St', 'Vermont', 'Wagner', 'Weber St',\n",
+       "       'Air Force', 'Alabama St', 'DePaul', 'Florida A&M', 'Georgia Tech',\n",
+       "       'Lehigh', 'Liberty', 'Morris Brown', 'Nevada', 'North Carolina',\n",
+       "       'Northern Iowa', 'Pacific', 'Princeton', 'Providence', 'Richmond',\n",
+       "       'Seton Hall', 'South Carolina', 'UAB', 'UCF', 'UTEP', 'Vanderbilt',\n",
+       "       'Washington', 'Alabama A&M', 'Bucknell', 'Chattanooga',\n",
+       "       'Delaware St', 'Iowa', 'Iowa St', 'Minnesota', 'New Mexico',\n",
+       "       'Niagara', 'Oakland', 'Ohio', 'Old Dominion', 'Villanova',\n",
+       "       'West Virginia', 'Arkansas', 'Belmont', 'Bradley', 'George Mason',\n",
+       "       'Georgetown', 'Iona', 'Oral Roberts', 'South Alabama', 'Tennessee',\n",
+       "       'Texas A&M', 'Wichita St', 'Jackson St', 'Long Beach St',\n",
+       "       'Miami OH', 'New Mexico St', 'North Texas', 'UNLV', 'Virginia',\n",
+       "       'Virginia Tech', 'Washington St', 'Wright St', 'Baylor', 'Boise St',\n",
+       "       'Clemson', 'Coppin St', 'Cornell', 'Drake', 'Kansas St',\n",
+       "       'Portland St', 'Temple', 'UMBC', 'UT Arlington', 'Akron',\n",
+       "       'Binghamton', 'Cleveland St', 'Florida St', 'Michigan',\n",
+       "       'Morehead St', 'Morgan St', 'Radford', 'Robert Morris', 'Houston',\n",
+       "       'Wofford', 'Indiana St', 'New Orleans', 'Penn St', 'Centenary',\n",
+       "       'Detroit', 'Harvard', 'Lamar', 'Loyola MD', 'Norfolk St',\n",
+       "       'South Florida', 'Southern Miss', 'St Bonaventure', 'James Madison',\n",
+       "       'La Salle', 'Delaware', 'Massachusetts', 'Mercer', 'Nebraska',\n",
+       "       'Buffalo', 'Georgia St', 'Lafayette', 'Northeastern', 'SMU',\n",
+       "       'UC Irvine'], dtype=object)"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show just a count of teams after the join\n",
+    "print('Unique matched teams: {}'.format(r_stats_df['TName'].unique().size))\n",
+    "print('Not matched teams:')\n",
+    "r_stats_df.loc[r_stats_df['TName'].isnull()]['Team_Name'].unique()"
    ]
   },
   {
