--- a/DA - NCAA - Get Matchup Data.ipynb
+++ b/DA - NCAA - Get Matchup Data.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "tny = pd.read_csv('dataset/TourneyCompactResults.csv')\n",
+    "tny = pd.read_csv('dataset/kaggle/TourneyCompactResults.csv')\n",
     "tny.head()"
    ]
   },
@@ -372,7 +372,7 @@
    "source": [
     "for ss in range(2002, 2017):\n",
     "    test = get_test(tny, ss)\n",
-    "    test.to_csv('dataset/sample_submission_' + str(ss) + \".csv\", index = False)"
+    "    test.to_csv('dataset/kaggle/TourneyPMatchup_' + str(ss) + \".csv\", index = False)"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "source": [
     "for ss in range(2002, 2017):\n",
     "    true = get_true(tny, ss)\n",
-    "    true.to_csv('dataset/' + str(ss) + '_true.csv', index = False)"
+    "    true.to_csv('dataset/kaggle/TourneyResults_' + str(ss) + '.csv', index = False)"
    ]
   }
  ],
