Added description in report.

--- a/report/DA - Report.tex
+++ b/report/DA - Report.tex
@@ -96,22 +96,28 @@ BCOR5mm, % Binding correction
 %\newpage % Start the article content on the second page, remove this if you have a longer abstract that goes onto the second page
 
 %----------------------------------------------------------------------------------------
-%	INTRODUCTION
+%	Problem description
 %----------------------------------------------------------------------------------------
 
-\section{Introduction}
+\section{Problem description}
  
 %----------------------------------------------------------------------------------------
-%	Background
+%	Dataset
 %----------------------------------------------------------------------------------------
 
-\section{Background}
+\section{Dataset}
 
 %----------------------------------------------------------------------------------------
-%	Methods
+%	Exploration
 %----------------------------------------------------------------------------------------
 
-\section{Methods}
+\section{Exploration}
+
+%----------------------------------------------------------------------------------------
+%	Analysis
+%----------------------------------------------------------------------------------------
+
+\section{Analysis}
 
 %----------------------------------------------------------------------------------------
 %	Result
@@ -120,10 +126,10 @@ BCOR5mm, % Binding correction
 \section{Result}
 
 %----------------------------------------------------------------------------------------
-%	Discussion
+%	Future work
 %----------------------------------------------------------------------------------------
 
-\section{Discussion}
+\section{Future work}
 
 
 %----------------------------------------------------------------------------------------
