Added season back to data matrix.

--- a/DA - NCAA - Get Data Matrix.ipynb
+++ b/DA - NCAA - Get Data Matrix.ipynb
@@ -2015,10 +2015,11 @@
     {
      "data": {
       "text/plain": [
-       "Index([u'WL', u'AdjEM_x', u'AdjO_x', u'AdjD_x', u'AdjT_x', u'Luck_x',\n",
-       "       u'SOS AdjEM_x', u'SOS OppO_x', u'SOS OppD_x', u'NCSOS AdjEM_x',\n",
-       "       u'AdjEM_y', u'AdjO_y', u'AdjD_y', u'AdjT_y', u'Luck_y', u'SOS AdjEM_y',\n",
-       "       u'SOS OppO_y', u'SOS OppD_y', u'NCSOS AdjEM_y'],\n",
+       "Index([u'Season', u'WL', u'AdjEM_x', u'AdjO_x', u'AdjD_x', u'AdjT_x',\n",
+       "       u'Luck_x', u'SOS AdjEM_x', u'SOS OppO_x', u'SOS OppD_x',\n",
+       "       u'NCSOS AdjEM_x', u'AdjEM_y', u'AdjO_y', u'AdjD_y', u'AdjT_y',\n",
+       "       u'Luck_y', u'SOS AdjEM_y', u'SOS OppO_y', u'SOS OppD_y',\n",
+       "       u'NCSOS AdjEM_y'],\n",
        "      dtype='object')"
       ]
      },
@@ -2029,7 +2030,7 @@
    ],
    "source": [
     "data = data.drop(['Rank_x','Rank_y','Team_x','Team_y','Conf_x','Conf_y','W-L_x','W-L_y',\n",
-    "                  'Team_Id_x','Team_Id_y','Team_Name_x','Team_Name_y','Season','Team1','Team2'], axis=1)\n",
+    "                  'Team_Id_x','Team_Id_y','Team_Name_x','Team_Name_y','Team1','Team2'], axis=1)\n",
     "data.columns"
    ]
   },
@@ -2048,6 +2049,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Season</th>\n",
        "      <th>WL</th>\n",
        "      <th>T1_AdjEM</th>\n",
        "      <th>T1_AdjO</th>\n",
@@ -2072,6 +2074,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2002</td>\n",
        "      <td>0</td>\n",
        "      <td>-8.69</td>\n",
        "      <td>98.1</td>\n",
@@ -2094,6 +2097,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2002</td>\n",
        "      <td>1</td>\n",
        "      <td>18.73</td>\n",
        "      <td>111.9</td>\n",
@@ -2116,6 +2120,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2002</td>\n",
        "      <td>1</td>\n",
        "      <td>20.52</td>\n",
        "      <td>117.2</td>\n",
@@ -2138,6 +2143,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>2002</td>\n",
        "      <td>1</td>\n",
        "      <td>34.14</td>\n",
        "      <td>118.9</td>\n",
@@ -2160,6 +2166,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>2002</td>\n",
        "      <td>1</td>\n",
        "      <td>24.80</td>\n",
        "      <td>112.0</td>\n",
@@ -2185,26 +2192,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   WL  T1_AdjEM  T1_AdjO  T1_AdjD  T1_AdjT  T1_Luck  T1_SOSADjEM  T1_SOSOppO  \\\n",
-       "0   0     -8.69     98.1    106.8     74.2    0.097       -15.24        93.2   \n",
-       "1   1     18.73    111.9     93.2     69.1    0.076         9.90       106.3   \n",
-       "2   1     20.52    117.2     96.7     73.0    0.080        14.48       109.9   \n",
-       "3   1     34.14    118.9     84.7     75.9   -0.027        10.09       107.8   \n",
-       "4   1     24.80    112.0     87.2     66.8   -0.049        13.66       109.0   \n",
+       "   Season  WL  T1_AdjEM  T1_AdjO  T1_AdjD  T1_AdjT  T1_Luck  T1_SOSADjEM  \\\n",
+       "0    2002   0     -8.69     98.1    106.8     74.2    0.097       -15.24   \n",
+       "1    2002   1     18.73    111.9     93.2     69.1    0.076         9.90   \n",
+       "2    2002   1     20.52    117.2     96.7     73.0    0.080        14.48   \n",
+       "3    2002   1     34.14    118.9     84.7     75.9   -0.027        10.09   \n",
+       "4    2002   1     24.80    112.0     87.2     66.8   -0.049        13.66   \n",
        "\n",
-       "   T1_SOSOppD  T1_NCSOSAdjEM  T2_AdjEM  T2_AdjO  T2_AdjD  T2_AdjT  T2_Luck  \\\n",
-       "0       108.4          -2.29     -1.20     98.6     99.8     68.9   -0.070   \n",
-       "1        96.4           2.49     -2.48     97.5    100.0     71.6    0.061   \n",
-       "2        95.4          18.68      8.90    106.1     97.2     64.8   -0.058   \n",
-       "3        97.7           7.52     -5.33     95.2    100.5     68.0    0.039   \n",
-       "4        95.4          13.51     14.11    109.4     95.2     63.6    0.011   \n",
+       "   T1_SOSOppO  T1_SOSOppD  T1_NCSOSAdjEM  T2_AdjEM  T2_AdjO  T2_AdjD  T2_AdjT  \\\n",
+       "0        93.2       108.4          -2.29     -1.20     98.6     99.8     68.9   \n",
+       "1       106.3        96.4           2.49     -2.48     97.5    100.0     71.6   \n",
+       "2       109.9        95.4          18.68      8.90    106.1     97.2     64.8   \n",
+       "3       107.8        97.7           7.52     -5.33     95.2    100.5     68.0   \n",
+       "4       109.0        95.4          13.51     14.11    109.4     95.2     63.6   \n",
        "\n",
-       "   T2_SOSADjEM  T2_SOSOppO  T2_SOSOppD  T2_NCSOSAdjEM  \n",
-       "0        -3.90        98.7       102.6          -1.15  \n",
-       "1        -5.12       100.3       105.4          -5.36  \n",
-       "2         0.23       101.4       101.2           2.86  \n",
-       "3       -10.81        95.4       106.2          -1.40  \n",
-       "4         5.87       104.9        99.0           3.57  "
+       "   T2_Luck  T2_SOSADjEM  T2_SOSOppO  T2_SOSOppD  T2_NCSOSAdjEM  \n",
+       "0   -0.070        -3.90        98.7       102.6          -1.15  \n",
+       "1    0.061        -5.12       100.3       105.4          -5.36  \n",
+       "2   -0.058         0.23       101.4       101.2           2.86  \n",
+       "3    0.039       -10.81        95.4       106.2          -1.40  \n",
+       "4    0.011         5.87       104.9        99.0           3.57  "
       ]
      },
      "execution_count": 14,
@@ -2244,7 +2251,7 @@
     {
      "data": {
       "text/plain": [
-       "(76724, 19)"
+       "(76724, 20)"
       ]
      },
      "execution_count": 15,
