Addded feature description.

--- a/report/DA - Report.tex
+++ b/report/DA - Report.tex
@@ -105,7 +105,21 @@ BCOR5mm, % Binding correction
 %	Dataset
 %----------------------------------------------------------------------------------------
 
+
 \section{Dataset}
+\subsection{Features description}
+\begin{description}
+\item [W-L]number of wins and losses
+\item [AdjEM] Adjusted Efficiency Margin.
+\item [AdjO] Adjusted offensive efficiency. Points scored per 100 possessions.
+\item [AdjD] Adjusted defensive efficiency. Point allowed per 100 possessions.
+\item [AdjT] Adjusted tempo. Possessions per 40 minutes.
+\item [Luck] Luck rating.
+\item [SOS AdjEM] Strength of schedule. Adjusted Efficiency Margin.
+\item [SOS OppO] Strength of schedule. Average AdjOE of opposing offenses.
+\item [SOS OppD] Strength of schedule. Average AdjDE of opposing defenses.
+\item [NCSOS AdjEM] Non-conference strength of schedule. Adjusted Efficiency Margin.
+\end{description}
 
 %----------------------------------------------------------------------------------------
 %	Exploration
